# coffeecode-uploader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.serena/: project.yml
example/: fastapi_example.py  file_example.py  image_example.py  media_example.py  send_example.py
src/coffeecode_uploader/: __init__.py  exceptions.py  file.py  image.py  media.py  send.py  uploaded_file.py  uploader.py
tests/: conftest.py  test_file_media_send.py  test_image.py  test_uploaded_file.py  test_uploader_base.py
